@@ -1,5 +1,7 @@
 *SVN*
 
+* Fixed that loading including associations returns all results if Load IDs For Limited Eager Loading returns none (closes #4528) [Rick]
+
 * Fixed HasManyAssociation#find bugs when :finder_sql is set #4600 [lagroue@free.fr]
 
 * Allow AR::Base#respond_to? to behave when @attributes is nil [zenspider]
